<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>jbpm-form-builder-parent</artifactId>
		<groupId>org.jbpm</groupId>
		<version>5.4.0-SNAPSHOT</version>
	</parent>

	<artifactId>jbpm-gwt-form-builder</artifactId>
	<packaging>war</packaging>
	<name>jBPM :: GWT Form Builder</name>
	<description>jBPM Form Builder</description>

	<properties>
		<gwt.version>2.4.0</gwt.version>
		<spring.version>3.0.6.RELEASE</spring.version>
		<errai.version>2.1-SNAPSHOT</errai.version>
		<gwt.maven.version>2.4.0</gwt.maven.version>
		<mvel.version>2.1.Beta8</mvel.version>
		<jetty.version>6.1.25</jetty.version>
	</properties>

	<dependencies>

		<!-- TODO HACK - Remove once Errai's dependency has been resolved -->
		<!-- Errai 2.0.1-SNAPSHOT uses com.google.guava r06 which lacks com/google/common/reflect/TypeToken -->
		<!-- Added additional compile time dependency for v12.0 which solves the 
			compilation error -->
		<!-- See https://community.jboss.org/thread/199952?tstart=0 -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>12.0</version>
			<scope>compile</scope>
		</dependency>

		<!-- Internal dependencies -->
		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>guvnorng-core</artifactId>
			<version>5.5.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>guvnorng-api</artifactId>
			<version>5.5.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>guvnorng-annotations</artifactId>
			<version>5.5.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.jboss.ejb3</groupId>
			<artifactId>jboss-ejb3-api</artifactId>
			<scope>provided</scope>
			<version>3.1.0</version>
		</dependency>

		<dependency>
			<groupId>javax.enterprise</groupId>
			<artifactId>cdi-api</artifactId>
			<scope>provided</scope>
			<version>1.0-SP4</version>
		</dependency>

		<!-- Errai Core -->
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-bus</artifactId>
			<version>${errai.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.inject</groupId>
					<artifactId>javax.inject</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.annotation</groupId>
					<artifactId>jsr250-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-ioc</artifactId>
			<version>${errai.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.inject</groupId>
					<artifactId>javax.inject</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.annotation</groupId>
					<artifactId>jsr250-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-tools</artifactId>
			<version>${errai.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mvel</groupId>
			<artifactId>mvel2</artifactId>
			<version>${mvel.version}</version>
		</dependency>

		<!-- CDI Integration Modules -->
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-cdi-client</artifactId>
			<version>${errai.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-uibinder</artifactId>
			<version>${errai.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-javax-enterprise</artifactId>
			<version>${errai.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-weld-integration</artifactId>
			<version>${errai.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-cdi-jetty</artifactId>
			<version>${errai.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Errai JAX-RS -->
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jaxrs-client</artifactId>
			<version>${errai.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jaxrs-provider</artifactId>
			<version>${errai.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jaxrs</artifactId>
			<version>2.3.3.Final</version>
		</dependency>

		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-cdi</artifactId>
			<version>2.3.3.Final</version>
		</dependency>

		<!-- CDI Development Utils -->
		<!-- This must be placed above com.google.gwt:gwt-dev to override the Jetty 
			that is present there -->
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty</artifactId>
			<version>${jetty.version}</version>
		</dependency>

		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-plus</artifactId>
			<version>${jetty.version}</version>
		</dependency>

		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-naming</artifactId>
			<version>${jetty.version}</version>
		</dependency>

		<!-- Weld Modules -->
		<dependency>
			<groupId>org.jboss.weld.se</groupId>
			<artifactId>weld-se-core</artifactId>
			<version>${weld.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jboss.weld.servlet</groupId>
			<artifactId>weld-servlet</artifactId>
			<version>${weld.version}</version>
		</dependency>

		<!-- Runtime / Container dependencies -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
		</dependency>

		<!-- Form Builder dependencies -->
		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-gwt-form-api</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-gwt-form-model</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-form-services</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-gwt-form-exporter-freemarker</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-gwt-form-exporter-gwt</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
			<!--scope>provided</scope -->
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<version>${gwt.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gwtmosaic</groupId>
			<artifactId>gwt-mosaic</artifactId>
			<version>0.4.0-rc4</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gwtmosaic</groupId>
			<artifactId>gwt-beans-binding</artifactId>
			<version>0.4.0-rc4</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gwtx</groupId>
			<artifactId>gwtx</artifactId>
			<version>1.5.3</version>
		</dependency>
		<dependency>
			<groupId>com.allen-sauer.gwt.dnd</groupId>
			<artifactId>gwt-dnd</artifactId>
			<version>3.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.gc.gwt.wysiwyg</groupId>
			<artifactId>gwt-html-editor</artifactId>
			<version>0.1.4</version>
			<!-- temporal fix. Should change soon enough -->
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/editor-0.1.4.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.gwtent</groupId>
			<artifactId>gwtent.parent</artifactId>
			<version>1.0.0</version>
			<!-- temporal fix. Should change soon enough -->
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/gwtent-1.0.0.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.yesmail</groupId>
			<artifactId>gwt-rolodex</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.fusesource.restygwt</groupId>
			<artifactId>restygwt</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.timepedia.exporter</groupId>
			<artifactId>gwtexporter</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gwtupload</groupId>
			<artifactId>gwtupload</artifactId>
			<version>0.6.3-compat</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt.google-apis</groupId>
			<artifactId>gwt-visualization</artifactId>
			<version>1.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>1.7</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.7.0clean-brew</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>3.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymockclassextension</artifactId>
			<version>3.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-beans</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-context</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<!-- JBOSS 7.1 provide this, tomcat and old jboss don't -->
			<!--scope>provided</scope -->
		</dependency>

	</dependencies>

	<build>
		<outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
		<finalName>jbpm-form-builder-${project.version}</finalName>
		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
			<resource>
				<directory>${basedir}/src/main/java</directory>
				<includes>
					<include>**/*.java</include>
					<include>**/*.gwt.xml</include>
					<include>**/*.xml</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<!-- plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
				<configuration> <excludes> <exclude>**/*GwtTest.java</exclude> </excludes> 
				</configuration> </plugin -->

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.maven.version}</version>
				<configuration>
					<deploy>${project.build.directory}/gwt-symbols-deploy</deploy>
					<logLevel>INFO</logLevel>
					<gwtVersion>${gwt.version}</gwtVersion>
					<style>DETAILED</style>
					<noServer>false</noServer>
					<!-- inplace>true</inplace -->
					<modules>
						<module>org.jbpm.formbuilder.parent.AbstractFormBuilder</module>
						<module>org.jbpm.formbuilder.FormBuilder</module>
						<module>org.jbpm.formdisplay.FormDisplay</module>
					</modules>
					<runTarget>FormBuilder.html</runTarget>
					<gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath><!-- The GWT compiler 
						must the correct JDT version -->
					<localWorkers>2</localWorkers><!-- Using all workers can temporarily 
						hang the mouse and isn't much faster -->
					<extraJvmArgs>-Xmx1024m -XX:MaxPermSize=256m</extraJvmArgs>
					<soyc>false</soyc>
					<hostedWebapp>src/main/webapp/</hostedWebapp>
					<server>org.jboss.errai.cdi.server.gwt.JettyLauncher</server>
				</configuration>
				<executions>
					<execution>
						<id>gwt-clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
					<execution>
						<id>gwt-compile</id>
						<goals>
							<goal>resources</goal>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<configuration>
					<warName>${project.artifactId}</warName>
					<outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
					<packagingExcludes>**/javax/**/*.*,**/client/**/*.class</packagingExcludes>

					<webResources>
						<resource>
							<directory>src/main/webapp</directory>
						</resource>
					</webResources>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<!-- TODO {manstis} Ensure in porcelli's refactoring -->
					<!-- The parent-parent.pom (i.e. droolsjbpm-parent) contains <fork>true</fork> 
						which causes the Java Annotation Processor mechanism to not process annotations 
						on classes in guvnorng-showcase. Why IDK but this solves the issue -->
					<fork>false</fork>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<!-- TODO {manstis} Ensure in porcelli's refactoring -->
			<!-- Ensure the generated source files are included in the source path -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<id>add-generated-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>target/generated-sources/annotations</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- plugin> <groupId>org.jboss.errai</groupId> <artifactId>jacoco-gwt-maven-plugin</artifactId> 
				<version>0.5.4.201202141554</version> <executions> <execution> <id>jacoco-gwt-prepare-agent</id> 
				<phase>initialize</phase> <goals> <goal>prepare-agent</goal> </goals> </execution> 
				<execution> <id>jacoco-gwt-report</id> <phase>site</phase> <goals> <goal>report</goal> 
				</goals> </execution> </executions> </plugin -->

			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}</directory>
							<includes>
								<include>www-test/**</include>
								<include>.gwt/**</include>
								<include>.errai/**</include>
								<include>src/main/webapp/app/**</include>
								<include>src/main/webapp/WEB-INF/deploy/**</include>
								<include>src/main/webapp/WEB-INF/lib/**</include>
								<include>src/main/webapp/WEB-INF/classes/**</include>
								<include>**/gwt-unitCache/**</include>
								<include>**/*.JUnit/**</include>
								<include>target/generated-sources/**</include>
							</includes>
							<excludes>
								<exclude>src/main/webapp/WEB-INF/lib/editor-0.1.4.jar</exclude>
								<exclude>src/main/webapp/WEB-INF/lib/gwt-rolodex-1.3.jar</exclude>
								<exclude>src/main/webapp/WEB-INF/lib/gwt-servlet.jar</exclude>
								<exclude>src/main/webapp/WEB-INF/lib/gwtent-1.0.0.jar</exclude>
							</excludes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<id>jetty</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<webDescriptor>jetty</webDescriptor>
			</properties>
			<dependencies>
				<!-- We need this for CDI BeanManager to work in Dev Mode -->
				<dependency>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty-naming</artifactId>
					<version>${jetty.version}</version>
					<scope>compile</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

</project>
